# template_prodml

./: Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml  workflow.yml
src/: model_service.py
src/code/models/: rf_db_v1  rf_db_v2  rf_v1
src/code/pipeline/: data_collection.py  model.py  preparation.py
src/config/: .env  config.py
src/db/: FMCG.sqlite  db_model.py
