[tool.poetry]
name = "basics"
version = "0.1.0"
description = "This project demonstrates the the basic workflow for a ML prroject"
authors = ["Nishu Choudhary"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arrow = "^1.3.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
plotly = "^5.24.1"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
loguru = "^0.7.3"
sqlalchemy = "^2.0.36"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
